--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+
     <canvas id="canvas1"></canvas>
+    <custom>
+        <h1>Flappy Bird Skeleton</h1>
+        <h3>Use Spacebar to control</h3>
+    </custom>
 
     <script src="bird.js"></script>
     <script src="particle.js"></script>
@@ -17,4 +25,5 @@
 
 
 </body>
+
 </html>
